fix: move footer on small res

--- a/src/app/components/home-navbar/home-navbar.component.css
+++ b/src/app/components/home-navbar/home-navbar.component.css
@@ -10,6 +10,7 @@
   padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
   z-index: 1000;
+  transition: bottom 0.3s ease;
 }
 
 @media (max-width: 700px) {
@@ -23,6 +24,10 @@
     padding: 5px;
     gap: 2vw;
   }
+}
+
+.navbar.near-footer {
+  bottom: 12vh;
 }
 
 .nav-item {
